# filmfinder

./: .gitignore  .gitmodules  README.md  docker-compose.yml  package-lock.json
movie-backend/: CMakeLists.txt  Dockerfile  dox.config
movie-backend/docs/: Doxyfile  dox.config
movie-backend/docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  globals.html  globals_func.html  index.html  main_8cpp.html  navtreedata.js
movie-backend/docs/latex/: files.tex  main_8cpp.tex  refman.tex
movie-backend/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  globals.html  globals_func.html  main_8cpp.html  navtreedata.js
movie-backend/latex/: files.tex  main_8cpp.tex  refman.tex
movie-backend/src/: main.cpp
movie-db/: Dockerfile  init.sql  populate_db.py
movie-frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json
movie-frontend/src/: index.html
movie-frontend/src/app/: app-routing.module.ts  app.component.spec.ts  app.module.ts  movie.service.ts
movie-frontend/src/app/discover/: discover.component.css  discover.component.html  discover.component.ts
movie-frontend/src/app/header/: header.component.css  header.component.html
movie-frontend/src/app/home/: home.component.css  home.component.html  home.component.ts
movie-frontend/src/app/models/: movie.model.ts
movie-frontend/src/app/moviecard/: moviecard.component.css  moviecard.component.html  moviecard.component.spec.ts  moviecard.component.ts
movie-frontend/src/app/recommend/: recommend.component.css  recommend.component.html  recommend.component.ts
(+3 files in other folders)
